--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,8 @@ dependencies = [
     "more_click",
     "typing-extensions",
     "github3.py",
-    "pydantic>=2.0"
+    "pydantic>=2.0",
+    "numpy>=2.0",
 ]
 
 # see https://peps.python.org/pep-0735/ and https://docs.astral.sh/uv/concepts/dependencies/#dependency-groups
@@ -127,7 +128,7 @@ Documentation = "https://wannier90_input.readthedocs.io"
 Funding = "https://github.com/sponsors/elinscott"
 
 [project.scripts]
-wannier90_input = "wannier90_input.cli:main"
+winput = "wannier90_input.cli:main"
 
 [tool.cruft]
 skip = [
@@ -139,9 +140,6 @@ skip = [
 [tool.mypy]
 plugins = [
     "pydantic.mypy",
-]
-exclude = [
-    "src/wannier90_input/xml_files/latest/parameters.xml",
 ]
 
 # Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
