--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ docs = [
     "sphinx-rtd-theme>=3.0","sphinx-click", 
     "sphinx_automodapi",
     # Include if your project uses Pydantic:
-    # "autodoc_pydantic",
+    "autodoc_pydantic",
     # To include LaTeX comments easily in your docs.
     # If you uncomment this, don't forget to do the same in docs/conf.py
     # texext
